# GrafikaStarter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GrafikaStarter.sln  LICENSE  README.md
GrafikaStarter/: GrafikaStarter.vcxproj  GrafikaStarter.vcxproj.filters
Libraries/Glad/include/glad/: glad.h
Libraries/Glad/src/: glad.c
Libraries/glm/include/glm/detail/: glm.cpp
src/: framework.cpp  framework.h  glad.c  main.cpp
